diagnostics: Support interactive V2 routine
Add a field for interaction in the routine waiting state to indicate
that the routine requires the client to take actions to proceed. For
some interactions (called inquiries), clients need to call the
`ReplyInquiry` method to respond.

DD: go/telemetry-extension-interactive-routine.

Note that RoutineTask is missing from the mojom file because there is
currently no interaction that does not need a reply.

BUG=b:309781398
TEST=FEATURES=test emerge-volteer diagnostics

Cq-Depend: chromium:5276818
Change-Id: I522d98b44668fff99513da9d6eacaec1d5d8c2cf
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5171546
Tested-by: Wei-Luan Wang <weiluanwang@google.com>
Commit-Queue: Wei-Luan Wang <weiluanwang@google.com>
Reviewed-by: Chung-sheng Wu <chungsheng@google.com>
Reviewed-by: Takashi Toyoshima <toyoshim@chromium.org>

--- a/diagnostics/cros_healthd/routines/BUILD.gn
+++ b/diagnostics/cros_healthd/routines/BUILD.gn
@@ -36,6 +36,7 @@ source_set("utils") {
   sources = [
     "base_routine_control.cc",
     "diag_routine_with_status.cc",
+    "interactive_routine_control.cc",
     "noninteractive_routine_control.cc",
     "routine_adapter.cc",
     "routine_service.cc",
@@ -67,6 +68,8 @@ if (use.test) {
     sources = [
       "base_routine_control_test.cc",
       "diag_routine_with_status_test.cc",
+      "interactive_routine_control_test.cc",
+      "noninteractive_routine_control_test.cc",
       "routine_service_test.cc",
       "routine_v2_test_utils_test.cc",
       "simple_routine_test.cc",
