camera: Add CameraAlgorithmAdapterLibcamera
Libcamera algo impl also bootstraps IPC with unix socket, while it's not
mojo pipe. This CL adds CameraAlgorithmAdapter implementation for
libcamera.

BUG=b:260283126
TEST=run on ciri

Cq-Depend: chromium:5383112, chromium:4714752

Disallow-Recycled-Builds: test-failures
Change-Id: I75163f8d80318f874e1d51908cc974664842bab0
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/4523032
Tested-by: Harvey Yang <chenghaoyang@chromium.org>
Reviewed-by: Yudhistira Erlandinata <yerlandinata@chromium.org>
Reviewed-by: Hanlin Chen <hanlinchen@google.com>
Commit-Queue: Harvey Yang <chenghaoyang@chromium.org>

--- a/camera/common/BUILD.gn
+++ b/camera/common/BUILD.gn
@@ -61,6 +61,7 @@ group("all") {
 }
 
 pkg_config("target_defaults") {
+  defines = [ "USE_LIBCAMERA=${use.libcamera}" ]
   configs = [ "//camera/build:cros_camera_common" ]
   pkg_deps = [
     "libcros_camera_android_deps",
@@ -401,6 +402,7 @@ generate_pkg_config("libcros_camera_pkg_config") {
 executable("cros_camera_algo") {
   sources = [
     "//camera/common/camera_algorithm_adapter.cc",
+    "//camera/common/camera_algorithm_adapter_libcamera.cc",
     "//camera/common/camera_algorithm_main.cc",
     "//camera/common/camera_algorithm_ops_impl.cc",
     "//camera/common/ipc_util.cc",
