init: compile mount_encrypted depends on USE encrypted_stateful
mount_encrypted is not needed when USE flag encrypted_stateful is not
set.
Move of mount_encrypted to init exposes it for viking, it was previously
in cryptohome that is not compiled on that board.

BUG=b:172221451
TEST=emerge-viking chromeos-init. CQ.

Fixes: commit f58688a4ba ("init: move mount_stateful")
Change-Id: I980746055acd6ef5dcf69acab5529c0fd7010838
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5384701
Commit-Queue: Gwendal Grignou <gwendal@chromium.org>
Commit-Queue: Baili Deng <bailideng@google.com>
Auto-Submit: Gwendal Grignou <gwendal@chromium.org>
Tested-by: Gwendal Grignou <gwendal@chromium.org>
Reviewed-by: Baili Deng <bailideng@google.com>

--- a/init/BUILD.gn
+++ b/init/BUILD.gn
@@ -12,8 +12,6 @@ group("all") {
     ":file_attrs_cleaner_tool",
     ":install_lvm_config",
     ":install_setuid_restriction",
-    ":mount-encrypted",
-    ":mount_encrypted_lib",
     ":net_poll_tool",
     ":periodic_scheduler",
     ":process_killer",
@@ -22,6 +20,12 @@ group("all") {
     ":usermode-helper",
     ":usr_share_cros_init_scripts",
   ]
+  if (use.encrypted_stateful) {
+    deps += [
+      ":mount-encrypted",
+      ":mount_encrypted_lib",
+    ]
+  }
   if (use.syslog) {
     deps += [
       ":install_chromeos-cleanup-logs",
@@ -33,12 +37,14 @@ group("all") {
       ":chromeos_startup_test",
       ":clobber_state_test",
       ":file_attrs_cleaner_test",
-      ":mount_encrypted_tests",
       ":periodic_scheduler_test",
       ":process_killer_test",
       ":usermode-helper_test",
       ":utils_test",
     ]
+    if (use.encrypted_stateful) {
+      deps += [ ":mount_encrypted_tests" ]
+    }
   }
 }
 
