attestation: get HWID by libcrossystem
BUG=b:282744816
TEST=unittest

Cq-Depend: chromium:5379959
Change-Id: I1d602ac69d307f65dc885516a804ec902554daea
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5382007
Reviewed-by: Howard Yang <hcyang@google.com>
Tested-by: Ching-Kang Yen <chingkang@chromium.org>
Commit-Queue: Ching-Kang Yen <chingkang@chromium.org>

--- a/attestation/BUILD.gn
+++ b/attestation/BUILD.gn
@@ -38,6 +38,7 @@ pkg_config("target_defaults") {
     # This is a list of pkg-config dependencies
     "libbrillo",
     "libchrome",
+    "libcrossystem",
   ]
   if (use.fuzzer) {
     pkg_deps += [ "protobuf" ]
@@ -92,10 +93,7 @@ source_set("proto_library") {
 
 # A library for common code.
 pkg_config("common_library_config") {
-  pkg_deps = [
-    "openssl",
-    "vboot_host",
-  ]
+  pkg_deps = [ "openssl" ]
   libs = [
     "hwsec",
     "hwsec-foundation",
