Reland "camera: Add StreamManipulatorHelper"
This is a reland of commit b09eb474fb52a3fb68619c5ae11053179636beba

Add "libcros_camera_mojom" dep to the unit tests to fix build error.

Original change's description:
> camera: Add StreamManipulatorHelper
>
> Consolidate stream manipulation logics to StreamManipulatorHelper.
> Doc: go/cros-camera:dd:refactor-stream-manipulation
>
> BUG=b:336491128
> TEST=FEATURES=test emerge-brya cros-camera-libs
>
> Change-Id: I7758ca71b8f30cdbd745b3a9cca15b33f64702a9
> Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5418316
> Commit-Queue: Ren-Pei Zeng <kamesan@chromium.org>
> Tested-by: Ren-Pei Zeng <kamesan@chromium.org>
> Reviewed-by: Ryota Okuji <okuji@chromium.org>

Bug: b:336491128
Change-Id: I820973fe53f6016d62fb033633558262355b4a2e
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5553370
Reviewed-by: Imran Ziad <imranziad@chromium.org>
Reviewed-by: Ryota Okuji <okuji@chromium.org>
Commit-Queue: Ren-Pei Zeng <kamesan@chromium.org>
Commit-Queue: Imran Ziad <imranziad@chromium.org>
Auto-Submit: Ren-Pei Zeng <kamesan@chromium.org>
Tested-by: Ren-Pei Zeng <kamesan@chromium.org>

--- a/camera/common/BUILD.gn
+++ b/camera/common/BUILD.gn
@@ -44,6 +44,7 @@ group("all") {
       ":embed_file_toc_test",
       ":future_test",
       ":relative_fov_test",
+      ":stream_manipulator_helper_test",
       ":stream_manipulator_manager_test",
 
       # TODO(b/262337896): Change back to use
@@ -304,9 +305,11 @@ source_set("camera_gpu_algorithm") {
 
 source_set("stream_manipulator") {
   sources = [
+    "//camera/common/capture_result_sequencer.cc",
     "//camera/common/framing_stream_manipulator.cc",
     "//camera/common/still_capture_processor_impl.cc",
     "//camera/common/stream_manipulator.cc",
+    "//camera/common/stream_manipulator_helper.cc",
     "//camera/common/stream_manipulator_manager.cc",
     "//camera/common/sw_privacy_switch_stream_manipulator.cc",
   ]
@@ -323,7 +326,6 @@ source_set("stream_manipulator") {
   ]
 
   deps = [
-    ":capture_result_sequencer",
     ":jpeg",
     "//camera/gpu:gpu_resources",
   ]
@@ -348,15 +350,6 @@ source_set("stream_manipulator") {
   if (use.camera_feature_super_res) {
     deps += [ "//camera/features/super_resolution" ]
   }
-}
-
-source_set("capture_result_sequencer") {
-  sources = [ "//camera/common/capture_result_sequencer.cc" ]
-  public_configs = [ ":target_defaults" ]
-  public_deps = [
-    ":base",
-    ":mojo_base",
-  ]
 }
 
 shared_library("libcros_camera") {
@@ -425,11 +418,12 @@ executable("cros_camera_algo") {
 
 # Build configs for unit tests.
 
-config("target_defaults_test") {
+pkg_config("target_defaults_test") {
   configs = [
     "//common-mk:test",
     ":target_defaults",
   ]
+  pkg_deps = [ "libchrome-test" ]
 }
 
 if (use.test) {
@@ -462,10 +456,16 @@ if (use.test) {
   }
 
   executable("capture_result_sequencer_test") {
-    sources = [ "//camera/common/capture_result_sequencer_test.cc" ]
+    sources = [
+      "//camera/common/camera_hal3_helpers.cc",
+      "//camera/common/capture_result_sequencer.cc",
+      "//camera/common/capture_result_sequencer_test.cc",
+    ]
     configs += [ ":target_defaults_test" ]
-    defines = [ "EGL_NO_X11" ]
-    deps = [ ":capture_result_sequencer" ]
+    deps = [
+      ":libcros_camera_mojom",
+      ":tracing",
+    ]
     run_test = true
   }
 
@@ -509,6 +509,24 @@ if (use.test) {
     configs += [ ":target_defaults_test" ]
     run_test = true
     deps = [ ":base" ]
+  }
+
+  executable("stream_manipulator_helper_test") {
+    sources = [
+      "//camera/common/camera_buffer_pool.cc",
+      "//camera/common/camera_hal3_helpers.cc",
+      "//camera/common/capture_result_sequencer.cc",
+      "//camera/common/relative_fov.cc",
+      "//camera/common/stream_manipulator_helper.cc",
+      "//camera/common/stream_manipulator_helper_test.cc",
+    ]
+    configs += [ ":target_defaults_test" ]
+    run_test = true
+    deps = [
+      ":libcros_camera_mojom",
+      ":tracing",
+      "//camera/common/test_support",
+    ]
   }
 
   executable("stream_manipulator_manager_test") {
