camera: Add camera_feature_super_res flag for super-res
Only enable the feature with camera_feature_super_res USE flag.

BUG=b:316252303
TEST=`USE='camera_feature_super_res' emerge-brya cros-camera
cros-camera-libs` and check zoomed still capture.
TEST=super-res is disabled without the USE flag

Change-Id: I57872ce524fbaedbbd11a305dcb495ceb9104524
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5382069
Reviewed-by: Ryota Okuji <okuji@chromium.org>
Commit-Queue: Juliana Chang <julianachang@chromium.org>
Tested-by: Juliana Chang <julianachang@chromium.org>

--- a/camera/common/BUILD.gn
+++ b/camera/common/BUILD.gn
@@ -341,7 +341,7 @@ source_set("stream_manipulator") {
   if (use.camera_feature_portrait_mode) {
     deps += [ "//camera/features/portrait_mode" ]
   }
-  if (use.dlc) {
+  if (use.camera_feature_super_res) {
     deps += [ "//camera/features/super_resolution" ]
   }
 }
