init: mount-encrypted: TpmSetup must use absolute path
- Make sure paths we are using are absolute.
- Add unit tests TpmSetup object.

BUG=b:328986146
TEST=Unit test.

Change-Id: I55e20b268cdecaf6822c8f1152b1e96fe883df93
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5360477
Tested-by: Gwendal Grignou <gwendal@chromium.org>
Reviewed-by: Brian Norris <briannorris@chromium.org>
Commit-Queue: Gwendal Grignou <gwendal@chromium.org>

--- a/init/BUILD.gn
+++ b/init/BUILD.gn
@@ -379,6 +379,7 @@ if (use.test) {
     sources = [
       "tpm_encryption/encryption_key_test.cc",
       "tpm_encryption/tlcl_stub.cc",
+      "tpm_encryption/tpm_setup_test.cc",
     ]
     configs += [
       "//common-mk:test",
