resourced: Add support for cpufreq boost
By disabling cpufreq boost mode we have observed a significant power
savings during WebRTC calls. This change adds support for setting the
cpufreq boost.

BUG=b:325506779
TEST=cargo test --workspace
TEST=test_that --autotest_dir ~/chromiumos/src/third_party/autotest/files \
     -b guybrush-kernelnext --args="servo_port=<port>" <IP> \
     power_VideoCall.FDO_25min_webrtc

Cq-Depend: chromium:5384530
Change-Id: I0f41974459f4f90c80fbf38ffb8fb5b54ff888dc
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5386661
Commit-Queue: Tim Van Patten <timvp@google.com>
Reviewed-by: Shah Hossain <shahadath@google.com>
Tested-by: Tim Van Patten <timvp@google.com>
Reviewed-by: Jesse McGuire <jessemcguire@google.com>

--- a/resourced/minijail/resourced.conf
+++ b/resourced/minijail/resourced.conf
@@ -71,6 +71,7 @@ bind-mount = /sys/class/power_supply
 #   /sys/devices/system/cpu/cpu*/online
 #   /sys/devices/system/cpu/cpufreq/policy*/scaling_governor
 #   /sys/devices/system/cpu/cpufreq/policy*/energy_performance_preference
+#   /sys/devices/system/cpu/cpufreq/boost
 #   /sys/devices/system/cpu/smt/control
 bind-mount = /sys/devices,,1
 
