--- a/resourced/tmpfiles.d/on-demand/resourced.conf
+++ b/resourced/tmpfiles.d/on-demand/resourced.conf
@@ -7,6 +7,7 @@
 z- /sys/devices/system/cpu/cpufreq/ondemand/powersave_bias 0644 resourced resourced
 z- /sys/devices/system/cpu/cpufreq/ondemand/sampling_rate 0644 resourced resourced
 z- /sys/devices/system/cpu/cpufreq/policy*/energy_performance_pref* 0644 resourced resourced
+z- /sys/devices/system/cpu/cpufreq/boost 0644 resourced resourced
 z- /sys/devices/system/cpu/cpu*/online 0644 resourced resourced
 z- /sys/kernel/mm/transparent_hugepage/enabled 0644 resourced resourced
 z- /sys/devices/system/cpu/smt/control 0644 resourced resourced
