--- a/shill/BUILD.gn
+++ b/shill/BUILD.gn
@@ -347,12 +347,12 @@ static_library("libshill") {
     "network/icmp_session.cc",
     "network/network.cc",
     "network/network_monitor.cc",
+    "network/portal_detector.cc",
     "network/slaac_controller.cc",
     "network/tc_process.cc",
     "network/throttler.cc",
     "network/trial_scheduler.cc",
     "network/validation_log.cc",
-    "portal_detector.cc",
     "power_manager.cc",
     "ppp_daemon.cc",
     "profile.cc",
@@ -823,12 +823,12 @@ if (use.test) {
       "network/mock_validation_log.cc",
       "network/network_monitor_test.cc",
       "network/network_test.cc",
+      "network/portal_detector_test.cc",
       "network/slaac_controller_test.cc",
       "network/tc_process_test.cc",
       "network/throttler_test.cc",
       "network/trial_scheduler_test.cc",
       "network/validation_log_test.cc",
-      "portal_detector_test.cc",
       "power_manager_test.cc",
       "ppp_daemon_test.cc",
       "profile_test.cc",
