--- a/debugd/BUILD.gn
+++ b/debugd/BUILD.gn
@@ -60,6 +60,7 @@ pkg_config("target_defaults") {
     "dbus-1",
     "libbrillo",
     "libchrome",
+    "libfbpreprocessor-client",
     "liblzma",
     "libmetrics",
     "libminijail",
@@ -99,6 +100,7 @@ generate_dbus_adaptors("debugd-adaptors") {
 pkg_config("libdebugd_dependent_config") {
   # NOSORT
   pkg_deps = [
+    "libfbpreprocessor-client",
     "libshill-client",
     "libuser_data_auth-client",
 
