camera: Create camera feature benchmark executable
Create a standalone binary cros_camera_feature_benchmark to test
camera feature. Test on face detection stream manipualtor as the first
step.

BUG=b:311138279
TEST=/usr/bin/cros_camera_feature_benchmark
TEST=tast run <dut> camera.PNPFeatureBenchmark.face_detection_1080p

Change-Id: I81103b13a24ac74bbdda6dcd740f9d43db7697fc
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5069976
Commit-Queue: Esker Wong <esker@google.com>
Reviewed-by: Ryota Okuji <okuji@chromium.org>
Tested-by: Esker Wong <esker@google.com>
Reviewed-by: Ren-Pei Zeng <kamesan@chromium.org>

--- a/camera/features/face_detection/BUILD.gn
+++ b/camera/features/face_detection/BUILD.gn
@@ -21,3 +21,10 @@ source_set("face_detection") {
   configs += [ "//common-mk:pic" ]
   deps = [ "//camera/common:libcros_camera_mojom" ]
 }
+
+source_set("face_detection_benchmark") {
+  sources = [ "//camera/features/face_detection/face_detection_benchmark.cc" ]
+  public_configs = [ ":target_defaults" ]
+  defines = [ "FACE_DETECTION" ]
+  deps = [ "//camera/common:face_detection" ]
+}
