camera: Move test_image files to test_support/ for broader usage
BUG=b:321665817
TEST=auto_framing_test

Change-Id: Ia4c467aad07f8fd12511c466cc0e40314c8f77d3
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5394712
Tested-by: Juliana Chang <julianachang@chromium.org>
Reviewed-by: Ryota Okuji <okuji@chromium.org>
Commit-Queue: Juliana Chang <julianachang@chromium.org>
Reviewed-by: Ren-Pei Zeng <kamesan@chromium.org>

--- a/camera/common/test_support/BUILD.gn
+++ b/camera/common/test_support/BUILD.gn
@@ -15,6 +15,9 @@ pkg_config("target_defaults") {
 }
 
 source_set("test_support") {
-  sources = [ "fake_still_capture_processor.cc" ]
+  sources = [
+    "fake_still_capture_processor.cc",
+    "test_image.cc",
+  ]
   configs += [ ":target_defaults" ]
 }
