camera: Add new diagnostics API
Adds the new mojo APIs. Register new services
in camera diagnostics. Refactor old service code.
Complete implementation will be added with follow up CLs.

New service:
* CrosCameraDiagnosticsService

BUG=b:304911893
TEST=emerge and deploy cros-camera-diagnostics, check logs

Change-Id: I925fcbc28bb1224be6d433fb0b4e3d58e378c7aa
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5367492
Tested-by: Imran Ziad <imranziad@chromium.org>
Reviewed-by: Ryota Okuji <okuji@chromium.org>
Commit-Queue: Imran Ziad <imranziad@chromium.org>
Reviewed-by: Juliana Chang <julianachang@chromium.org>

--- a/camera/diagnostics/BUILD.gn
+++ b/camera/diagnostics/BUILD.gn
@@ -22,9 +22,9 @@ generate_mojom_bindings("cros_camera_diagnostics_mojom") {
 
 executable("cros_camera_diagnostics_service") {
   sources = [
-    "camera_diagnostics.cc",
-    "camera_diagnostics_impl.cc",
     "camera_diagnostics_main.cc",
+    "camera_diagnostics_mojo_manager.cc",
+    "camera_diagnostics_server.cc",
     "dirty_lens_analyzer.cc",
   ]
   configs += [ "//camera/build:cros_camera_common" ]
