--- a/camera/diagnostics/BUILD.gn
+++ b/camera/diagnostics/BUILD.gn
@@ -24,7 +24,9 @@ executable("cros_camera_diagnostics_service") {
   sources = [
     "camera_diagnostics_main.cc",
     "camera_diagnostics_mojo_manager.cc",
+    "camera_diagnostics_processor.cc",
     "camera_diagnostics_server.cc",
+    "camera_diagnostics_session.cc",
     "dirty_lens_analyzer.cc",
   ]
   configs += [ "//camera/build:cros_camera_common" ]
