lvmd: Add dep to liblvmd
BUG=b:331216650
TEST=CQ

Change-Id: If00335308015d710b36d2b8750d3c5f153f1259c
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5398053
Commit-Queue: Sarthak Kukreti <sarthakkukreti@google.com>
Reviewed-by: Sarthak Kukreti <sarthakkukreti@google.com>
Commit-Queue: Jae Hoon Kim <kimjae@chromium.org>
Tested-by: Sarthak Kukreti <sarthakkukreti@google.com>

--- a/lvmd/BUILD.gn
+++ b/lvmd/BUILD.gn
@@ -46,6 +46,7 @@ generate_dbus_adaptors("lvmd_dbus_adaptors") {
 static_library("liblvmd") {
   sources = [ "lvmd.cc" ]
   configs += [ ":target_defaults" ]
+  deps = [ ":lvmd_dbus_adaptors" ]
 }
 
 executable("lvmd") {
