crosier-chrome: fix crosier test metadata.
BUG=b:294097177
TEST=local

Change-Id: I1fcb33c1620412fe9805d2253a303b150cec4fc6
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5399940
Tested-by: Alex Bergman <abergman@google.com>
Auto-Submit: Alex Bergman <abergman@google.com>
Reviewed-by: Seewai Fu <seewaifu@google.com>
Commit-Queue: Seewai Fu <seewaifu@google.com>

--- a/crosier-chrome/test_metadata/web_approvals_integration_test.yaml
+++ b/crosier-chrome/test_metadata/web_approvals_integration_test.yaml
@@ -15,6 +15,6 @@ hw_agnostic: True
 criteria: |
   Checks that matures sites are blocked for Unicorn users
 cases:
-  - id: "TestMatureSiteBlocked"
+  - id: "DISABLED_TestMatureSiteBlocked"
     tags: []
 ...
