vm_tools: concierge: Refactor service_arc.cc and add unit tests
Before: service_arc.cc contained a mix of:
(1) class-related implementations for the "Service" class
   (such as Service::StartArcVmInternal) from service.h)
(2) non-member utility functions (such as IsValid*)

This CL moves the self-contained non-member utility functions
to a new file, service_arc_utils.cc, and adds unit tests.

BUG=b:330134027
TEST=P2_TEST_FILTER="ServiceArcUtilsTest.*" FEATURES=test emerge-* vm_host_tools

Change-Id: I83bd8781e268e19b95164a9bd6fef339d7691490
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5400896
Commit-Queue: Satoshi Niwa <niwa@chromium.org>
Reviewed-by: Keiichi Watanabe <keiichiw@chromium.org>
Tested-by: Satoshi Niwa <niwa@chromium.org>

--- a/vm_tools/concierge/BUILD.gn
+++ b/vm_tools/concierge/BUILD.gn
@@ -53,6 +53,7 @@ static_library("libconcierge") {
     "seneschal_server_proxy.cc",
     "service.cc",
     "service_arc.cc",
+    "service_arc_utils.cc",
     "service_common.cc",
     "service_plugin.cc",
     "service_start_vm_helper.cc",
@@ -159,6 +160,7 @@ if (use.test) {
       "mm/reclaim_broker_test.cc",
       "mm/server_test.cc",
       "power_manager_client_test.cc",
+      "service_arc_utils_test.cc",
       "service_common_test.cc",
       "service_start_vm_helper_test.cc",
       "service_test.cc",
