diagnostics: Add unit tests for volume button evdev delegate
BUG=b:322268929
TEST=FEATURES=test emerge-volteer diagnostics

Change-Id: Iae3daa381b8be3e1e5b3a8c36aa2fc7e83cb805e
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5400860
Tested-by: Wei-Luan Wang <weiluanwang@google.com>
Commit-Queue: Wei-Luan Wang <weiluanwang@google.com>
Reviewed-by: Kerker Yang <kerker@chromium.org>

--- a/diagnostics/cros_healthd/delegate/events/BUILD.gn
+++ b/diagnostics/cros_healthd/delegate/events/BUILD.gn
@@ -25,6 +25,7 @@ if (use.test) {
     sources = [
       "audio_jack_evdev_delegate_test.cc",
       "power_button_evdev_delegate_test.cc",
+      "volume_button_evdev_delegate_test.cc",
     ]
     pkg_deps = [
       "libchrome-test",
