soul: Add intake queue to reaper
Add a queue and message structure that can be used by intake sockets to
enqueue messages from other programs for further processing.

BUG=b:331584697
TEST=FEATURES=test emerge-hatch reaper
TEST=cargo test

Change-Id: I422344de5795800fe2e87b62de7320ee12507536
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5402474
Reviewed-by: Allen Webb <allenwebb@google.com>
Tested-by: Christoph Schlosser <cschlosser@chromium.org>
Reviewed-by: Alyssa Haroldsen <kupiakos@google.com>
Commit-Queue: Christoph Schlosser <cschlosser@chromium.org>

--- a/soul/reaper/Cargo.toml
+++ b/soul/reaper/Cargo.toml
@@ -9,7 +9,9 @@ chromeos = []
 
 [dependencies]
 anyhow = "1.0"
+chrono = "0.4"
 env_logger = "0.9"
 log = "0.4"
 serde = { version = "1.0", features = [ "derive" ] }
+tokio = { version = "1.0", features = [ "macros", "rt-multi-thread", "sync", "time" ] }
 toml = "0.5"
