mini_udisks: Add ESP module
This module provides information on the ESP partition mounted by
chromeos-init.

BUG=b:328780545
TEST=cargo +nightly llvm-cov --html --branch --open
TEST=cros_workon start chromeos-base/mini_udisks
TEST=FEATURES=test emerge-reven chromeos-base/mini_udisks

Change-Id: I51110cb83f1d7ee5a10eb601f4f04652f44ee61a
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5402114
Commit-Queue: Nicholas Bishop <nicholasbishop@google.com>
Tested-by: Nicholas Bishop <nicholasbishop@google.com>
Reviewed-by: Jeffery Miller <jefferymiller@google.com>

--- a/mini_udisks/Cargo.toml
+++ b/mini_udisks/Cargo.toml
@@ -10,3 +10,6 @@ dbus = "0.9"
 dbus-crossroads = "0.5"
 libchromeos = { path = "../libchromeos-rs" } # provided by ebuild
 log = "0.4"
+
+[dev-dependencies]
+tempfile = "3.0.0"
