vm_tools: Set -Wno-error=thread-safety-reference-return
There are several occurrences of Wthread-safety-reference-return which
need to be resolved in order tro uprev LLVM. In the long run we should
fix these, as they likely indicate thread safety bugs, but in the
meantime we can disable this warning to unblock the roll.

BUG=b:331634345
TEST=emerge-hana vm_host_tools

Change-Id: I92795ab8e6fd2c97e4caeecb9f5d9272400d5962
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5403296
Tested-by: Ryan Beltran <ryanbeltran@chromium.org>
Reviewed-by: David Munro <davidmunro@google.com>
Commit-Queue: Ryan Beltran <ryanbeltran@chromium.org>
Auto-Submit: Ryan Beltran <ryanbeltran@chromium.org>

--- a/vm_tools/host/BUILD.gn
+++ b/vm_tools/host/BUILD.gn
@@ -62,6 +62,9 @@ config("host_target_defaults") {
     "USE_CROSVM_VIRTGPU_NATIVE_CONTEXT=${use.virtgpu_native_context}",
     "USE_CROSVM_CROSS_DOMAIN_CONTEXT=${use.cross_domain_context}",
   ]
+
+  # TODO(b/331634345): Fix thread safety violations so we can turn this back on.
+  cflags = [ "-Wno-error=thread-safety-reference-return" ]
 }
 
 executable("maitred_client") {
