camera: diagnostics: Setup CrosCameraController service
CrosCameraController mojo interface is implemented by cros-camera
service to provide camera diagnostics service a way to start|stop
streaming frames from camera service when a camera is open.

We setup the service now, the operations are still not integrated.

BUG=b:304911893
TEST=emerge cros-camera, cros-camera-libs and check logs
TEST=Normal camera operations are not impacted

Cq-Depend: chromium:5369481
Change-Id: Iad5d94ba127aa8c7f8ee1dbc72c18f768ec10bef
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5404648
Tested-by: Imran Ziad <imranziad@chromium.org>
Reviewed-by: Ryota Okuji <okuji@chromium.org>
Commit-Queue: Imran Ziad <imranziad@chromium.org>

--- a/camera/hal_adapter/cros_camera_service_mojo_policy.jsonc
+++ b/camera/hal_adapter/cros_camera_service_mojo_policy.jsonc
@@ -8,7 +8,9 @@
     {
       "identity": "u:r:cros_camera_service:s0",
       "own": [
-        "CrosCameraService"
+        "CrosCameraService",
+        // Used by camera diagnostics service for start/stop streaming.
+        "CrosCameraController"
       ]
     },
     {
@@ -20,7 +22,8 @@
     {
       "identity": "u:r:cros_ssh_session:s0",
       "request": [
-        "CrosCameraService"
+        "CrosCameraService",
+        "CrosCameraController"
       ]
     },
     {
@@ -29,6 +32,12 @@
       "identity": "u:r:cros_healthd:s0",
       "request": [
         "CrosCameraService"
+      ]
+    },
+    {
+      "identity": "u:r:cros_camera_diagnostics_service:s0",
+      "request": [
+        "CrosCameraController"
       ]
     }
 ]
