--- a/soul/reaper/Cargo.toml
+++ b/soul/reaper/Cargo.toml
@@ -15,5 +15,9 @@ itertools = "0.11"
 log = "0.4"
 num_enum = "0.5"
 serde = { version = "1.0", features = [ "derive" ] }
-tokio = { version = "1.0", features = [ "macros", "rt-multi-thread", "sync", "time" ] }
+thiserror = "1.0"
+tokio = { version = "1.29", features = [ "macros", "net", "rt-multi-thread", "sync", "time" ] }
 toml = "0.5"
+
+[dev-dependencies]
+tempfile = "3"
