Reland "Reland "minios: install upstart configs""
This is a reland of commit 7f5478a85bd3ff8a3cbbbbf04b617e77321ffb7a

Relanding after fix in crrev/c/5757845

Original change's description:
> Reland "minios: install upstart configs"
>
> Reland due to fix in crrev/c/5663925
>
> This is a reland of commit 8732561bb0c00e9b6f56f00ade9892ca16f378da
>
> Original change's description:
> > minios: install upstart configs
> >
> > Install upstart configs to save logs to CrOS.
> >
> > BUG=b:266145251
> > TEST=Verified log extraction and key clearing on brya dut
> >
> > Cq-Depend: 5485657
> > Change-Id: Ie34cbfe4566d833dbaeb7d7d89ae3a937deddba8
> > Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5405321
> > Reviewed-by: Yuanpeng Ni‎ <yuanpengni@chromium.org>
> > Tested-by: Saketh Pothireddy <spothire@google.com>
> > Commit-Queue: Saketh Pothireddy <spothire@google.com>
>
> Bug: b:266145251
> Change-Id: If0a7529c49282114735b49be9afbdfe005358634
> Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5696765
> Reviewed-by: Jae Hoon Kim <kimjae@chromium.org>
> Auto-Submit: Saketh Pothireddy <spothire@google.com>
> Tested-by: Saketh Pothireddy <spothire@google.com>
> Commit-Queue: Saketh Pothireddy <spothire@google.com>

Bug: b:266145251
Change-Id: I6c25f5a555f4f7fe443c0e0bb4233e4a94586ab1
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5814549
Commit-Queue: Saketh Pothireddy <spothire@google.com>
Tested-by: Saketh Pothireddy <spothire@google.com>
Reviewed-by: Jae Hoon Kim <kimjae@chromium.org>
Auto-Submit: Saketh Pothireddy <spothire@google.com>

--- a/minios/BUILD.gn
+++ b/minios/BUILD.gn
@@ -9,6 +9,9 @@ import("//common-mk/pkg_config.gni")
 group("all") {
   deps = [
     ":install_minijail_conf",
+    ":install_minios_logs_config",
+    ":install_seccomp_policy",
+    ":install_tmpfiles_config",
     ":minios",
     ":minios_adaptors",
     ":minios_client",
@@ -54,7 +57,10 @@ generate_dbus_proxies("minios_proxies") {
 }
 
 install_config("install_minijail_conf") {
-  sources = [ "minijail/syslog.conf" ]
+  sources = [
+    "minijail/minios_util.conf",
+    "minijail/syslog.conf",
+  ]
   install_path = "minijail_conf"
 }
 
@@ -115,6 +121,22 @@ executable("minios_client") {
   sources = [ "client/minios_client.cc" ]
   configs += [ ":target_defaults" ]
   deps = [ ":minios_proxies" ]
+}
+
+install_config("install_minios_logs_config") {
+  sources = [ "init/minios_util_logs.conf" ]
+  install_path = "upstart"
+}
+
+install_config("install_tmpfiles_config") {
+  sources = [ "init/tmpfiles.d/minios_util.conf" ]
+  install_path = "tmpfiled_ondemand"
+}
+
+install_config("install_seccomp_policy") {
+  sources = [ "seccomp/minios-util-" + getenv("ARCH") + ".policy" ]
+  outputs = [ "minios-util.policy" ]
+  install_path = "seccomp_policy"
 }
 
 if (use.test) {
