--- a/modemfwd/BUILD.gn
+++ b/modemfwd/BUILD.gn
@@ -70,6 +70,7 @@ static_library("libmodemfw") {
     "firmware_directory.cc",
     "firmware_file.cc",
     "firmware_manifest_v2.cc",
+    "heartbeat_task.cc",
     "journal.cc",
     "logging.cc",
     "metrics.cc",
@@ -90,10 +91,7 @@ static_library("libmodemfw") {
     ":upstart_proxies",
     "//modemfwd//proto:modemfw-protos",
   ]
-  pkg_deps = [
-    "libstructuredmetrics",
-    "re2",
-  ]
+  pkg_deps = [ "libstructuredmetrics" ]
 }
 
 executable("modemfwd") {
@@ -133,6 +131,7 @@ if (use.test) {
       "firmware_directory_stub.cc",
       "firmware_directory_test.cc",
       "firmware_file_test.cc",
+      "heartbeat_task_test.cc",
       "journal_test.cc",
       "metrics_test.cc",
       "modem_flasher_test.cc",
