diagnostics: Apply OEM name in network bandwidth routine
* Update network bandwidth routine supportability
* Use OEM name to construct user agent in NDT client

BUG=b:320631510, b:323311261
TEST=FEATURES=test emerge-volteer diagnostics
TEST=(DUT) cros-health-tool diag network_bandwidth

Change-Id: Ic86228d8b17700630a3e97eb42548abc45678211
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5406972
Auto-Submit: Byron Lee <byronlee@chromium.org>
Commit-Queue: Wei-Luan Wang <weiluanwang@google.com>
Commit-Queue: Byron Lee <byronlee@chromium.org>
Reviewed-by: Wei-Luan Wang <weiluanwang@google.com>
Tested-by: Byron Lee <byronlee@chromium.org>

--- a/diagnostics/cros_healthd/delegate/utils/BUILD.gn
+++ b/diagnostics/cros_healthd/delegate/utils/BUILD.gn
@@ -16,6 +16,7 @@ source_set("utils") {
     "libdrm",
     "libevdev",
     "libmojo",
+    "vboot_host",
   ]
   pkg_deps = [ "libndt7" ]
   public_deps = [
