diagnostics: Create a copy of graphics fetcher in executor delegate
Copy the code of graphics fetcher into the `fetcher` directory of
executor delegate.

Move the original graphics fetcher code into a `deprecated` namespace
in preparation for deprecation.

BUG=b:255259964
TEST=FEATURES=test emerge-volteer diagnostics
     Run `cros-health-tool telem --category=graphics` on Volteer(amd64), Cherry(arm64) and Hana(arm32)

Change-Id: I23028b307bc07cb6b030280e78c83544dc155e97
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5409813
Reviewed-by: Wei-Luan Wang <weiluanwang@google.com>
Reviewed-by: Kerker Yang <kerker@chromium.org>
Commit-Queue: Ethan Cheng <yycheng@google.com>
Tested-by: Ethan Cheng <yycheng@google.com>

--- a/diagnostics/cros_healthd/delegate/fetchers/BUILD.gn
+++ b/diagnostics/cros_healthd/delegate/fetchers/BUILD.gn
@@ -6,6 +6,7 @@ source_set("fetchers") {
   sources = [
     "boot_performance.cc",
     "display_fetcher.cc",
+    "graphics_fetcher.cc",
     "psr_fetcher.cc",
     "touchpad_fetcher.cc",
   ]
@@ -14,7 +15,10 @@ source_set("fetchers") {
     "libbrillo",
     "libchrome",
   ]
+  defines = [ "USE_MESA_REVEN=${use.mesa_reven}" ]
   pkg_deps = [
+    "egl",
+    "glesv2",
     "libmetrics",
     "re2",
   ]
@@ -32,6 +36,7 @@ if (use.test) {
   source_set("test") {
     sources = [
       "boot_performance_test.cc",
+      "graphics_fetcher_test.cc",
       "touchpad_fetcher_test.cc",
     ]
     pkg_deps = [
