--- a/shill/BUILD.gn
+++ b/shill/BUILD.gn
@@ -384,6 +384,7 @@ static_library("libshill") {
     "upstart/upstart.cc",
     "virtual_device.cc",
     "vpn/vpn_driver.cc",
+    "vpn/vpn_metrics.cc",
     "vpn/vpn_provider.cc",
     "vpn/vpn_service.cc",
     "vpn/vpn_types.cc",
