shill: vpn: Move IP type metrics test to vpn_metrics_test.cc
To isolate the metrics reporting code in unit test better.

BUG=b:331743444
TEST=FEATURES="test" emerge-$BOARD shill

Change-Id: If14432b92d78e5d155198878a213fc482f047e42
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5401648
Tested-by: Jie Jiang <jiejiang@chromium.org>
Commit-Queue: Jie Jiang <jiejiang@chromium.org>
Reviewed-by: Taoyu Li <taoyl@chromium.org>

--- a/shill/BUILD.gn
+++ b/shill/BUILD.gn
@@ -937,6 +937,7 @@ if (use.test) {
         "vpn/mock_openvpn_driver.cc",
         "vpn/mock_openvpn_management_server.cc",
         "vpn/mock_vpn_driver.cc",
+        "vpn/mock_vpn_metrics.cc",
         "vpn/mock_vpn_service.cc",
         "vpn/openvpn_driver_test.cc",
         "vpn/openvpn_management_server_test.cc",
@@ -944,6 +945,7 @@ if (use.test) {
         "vpn/vpn_connection_test.cc",
         "vpn/vpn_connection_under_test.cc",
         "vpn/vpn_driver_test.cc",
+        "vpn/vpn_metrics_test.cc",
         "vpn/vpn_provider_test.cc",
         "vpn/vpn_service_test.cc",
         "vpn/wireguard_driver_test.cc",
