shill: audit portal detector requests.
Add a traffic annotation identifier to the portal detector HTTP(s)
requests to allow patchpanel to audit it.

BUG=b:331619984
TEST=tast run dut network.ShillCaptivePortalHTTP.*
  Connect a DUT to a network and check in the log patchpanel receives
  the request.

Change-Id: Ib134967ac671f9c2fda7519bf2ca8e91a9b154c2
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5407697
Reviewed-by: Chih-Yu Huang <akahuang@chromium.org>
Tested-by: Damien Dejean <damiendejean@google.com>
Commit-Queue: ChromeOS Auto Retry <chromeos-auto-retry@chromeos-bot.iam.gserviceaccount.com>
Reviewed-by: Hugo Benichi <hugobenichi@google.com>

--- a/patchpanel/dbus/org.chromium.Patchpanel.conf
+++ b/patchpanel/dbus/org.chromium.Patchpanel.conf
@@ -116,6 +116,11 @@
     <allow send_destination="org.chromium.PatchPanel"
            send_interface="org.chromium.PatchPanel"
            send_member="GetDownstreamNetworkInfo" />
+    <!-- Method used by shill to add a traffic annotation to its HTTP(s)
+         requests. -->
+    <allow send_destination="org.chromium.PatchPanel"
+           send_interface="org.chromium.PatchPanel"
+           send_member="TagSocket" />
   </policy>
   <policy user="devbroker">
     <!-- Single iptables control method used by permission_broker as a backend
